--- a/index.html
+++ b/index.html
@@ -380,13 +380,18 @@
         </div>
     </div>
 </footer>
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop" data-modal>
     <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
             <svg class="social-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-close"></use>
             </svg>
         </button>
+        <h2>Залиште свої дані, ми вам передзвонимо</h2>
+        <form autocomplete="on" novalidate>
+            <label for="">Імʼя</label>
+
+        </form>
     </div>
 </div>
 <script src="./js/modal.js"></script>
