--- a/index.html
+++ b/index.html
@@ -389,7 +389,8 @@
         </button>
         <h2>Залиште свої дані, ми вам передзвонимо</h2>
         <form autocomplete="on" novalidate>
-            <label for="">Імʼя</label>
+            <label for="name">Імʼя</label>
+            <input id="name" type="text"/>
 
         </form>
     </div>
