--- a/index.html
+++ b/index.html
@@ -377,21 +377,65 @@
                 </li>
             </ul>
         </div>
+        <div class="subscription-box">
+          <p class="text">Підпишіться на розсилку</p> 
+          <form class="subscription-form">
+            <input class="subscription-button"/>
+            <button сlass="button" type="submit" type="button">Підписатися</button>
+          </form>     
+        </div>
         </div>
     </div>
 </footer>
 <div class="backdrop" data-modal>
     <div class="modal">
+        <div class="modal-container">
         <button type="button" class="btn-close" data-modal-close>
             <svg class="social-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-close"></use>
             </svg>
         </button>
-        <h2>Залиште свої дані, ми вам передзвонимо</h2>
-        <form autocomplete="on" novalidate>
-            <label for="name">Імʼя</label>
-            <input id="name" type="text"/>
+        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form name="contakt-form" autocomplete="on" novalidate>
+                <label class="form-fild-label" for="user-name">Імʼя</label>
+                <div class="form-fild">
+                <input class="form-fild-input" id="user-name" type="text" name="user-name"/>
+                <svg class="form-fild-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-form-person"></use>
+                </svg>
+            </div>
 
+            <label class="form-fild-label" for="user-tel">Телефон</label>
+            <div class="form-fild">
+                <input class="form-fild-input" id="user-tel" type="tel" name="user-tel" />
+                <svg class="form-fild-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-form-phone"></use>
+                </svg>
+            </div>
+
+            <label class="form-fild-label" for="user-email">Пошта</label>
+            <div class="form-fild">
+                <input class="form-fild-input" id="user-email" type="email" name="user-email" />
+                <svg class="form-fild-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-form-email"></use>
+                </svg>
+            </div>
+
+                <label class="form-fild-label" for="user-coment">Коментар</label>
+                <textarea 
+                class="form-fild-textarea"
+                name="user-coment" 
+                id="user-coment" 
+                placeholder="Введіть текст">
+            </textarea>
+            <div class="checkbox-box">
+            <input type="checkbox" name="checkbox"/>
+            <label class="form-label-checkbox" for="checkbox">Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a></label>
+            </div>
+            <button сlass="button form-submit" type="submit">Відправити</button>
+        
+        </div>
+    </div>
         </form>
     </div>
 </div>
