--- a/index.html
+++ b/index.html
@@ -426,13 +426,12 @@
                 class="form-fild-textarea"
                 name="user-coment" 
                 id="user-coment" 
-                placeholder="Введіть текст">
-            </textarea>
+                placeholder="Введіть текст"></textarea>
             <div class="checkbox-box">
             <input type="checkbox" name="checkbox"/>
             <label class="form-label-checkbox" for="checkbox">Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a></label>
             </div>
-            <button сlass="button form-submit" type="submit">Відправити</button>
+            <button сlass="form-submit button" type="submit">Відправити</button>
         
         </div>
     </div>
