--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
           <p class="text">Підпишіться на розсилку</p> 
           <form class="subscription-form">
             <input class="subscription-button"/>
-            <button сlass="button" type="submit" type="button">Підписатися</button>
+          </div>
+            <button class="button" type="submit" type="button">Підписатися</button>
           </form>     
         </div>
         </div>
@@ -430,10 +431,7 @@
             <div class="checkbox-box">
             <input type="checkbox" name="checkbox"/>
             <label class="form-label-checkbox" for="checkbox">Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a></label>
-            </div>
-            <button сlass="form-submit button" type="submit">Відправити</button>
-        
-        </div>
+            <button сlass="form-submit" type="submit">Відправити</button>
     </div>
         </form>
     </div>
