--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
           <p class="text">Підпишіться на розсилку</p> 
           <form class="subscription-form">
             <input class="subscription-button"/>
-          </div>
-            <button class="button" type="submit" type="button">Підписатися</button>
-          </form>     
-        </div>
+            </form>
+          
+            <button class="button" type="button">Підписатися</button>
+            </div>
         </div>
     </div>
 </footer>
@@ -429,12 +429,13 @@
                 id="user-coment" 
                 placeholder="Введіть текст"></textarea>
             <div class="checkbox-box">
-            <input type="checkbox" name="checkbox"/>
+            <input type="checkbox" id="checkbox" name="checkbox"/>
             <label class="form-label-checkbox" for="checkbox">Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a></label>
-            <button сlass="form-submit" type="submit">Відправити</button>
+            <button class="form-submit" type="submit">Відправити</button>
     </div>
         </form>
     </div>
+</div>
 </div>
 <script src="./js/modal.js"></script>
 </body>
