--- a/portfolio.html
+++ b/portfolio.html
@@ -197,62 +197,77 @@
     </main>
     <!--футер-->
     <footer>
-    <div class="section footer">
-        <div class="container">
-            <div class="address-box">
-                <a href=./index.html class="logo footer">Web<span class="second-logo footer">Studio</span>
-                </a>
-                <address class="address">
-                    <ul class="address-list list">
-                        <li class="address-item">
-                            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                                rel="noopener noreferrer nofollow" class="address-item-map link">м.Київ, пр-т Лесі Українки,
-                                26</a>
+        <div class="section footer">
+            <div class="section footer container">
+                <div class="address-box">
+                    <a href=./index.html class="logo footer">Web<span class="second-logo footer">Studio</span>
+                    </a>
+                    <address class="address">
+                        <ul class="address-list list">
+                            <li class="address-item">
+                                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
+                                    rel="noopener noreferrer nofollow" class="address-item-map link">м.Київ, пр-т Лесі
+                                    Українки,
+                                    26</a>
+                            </li>
+                            <li class="address-item">
+                                <a href="mailto:info@devstudio.com" class="address-item-link link">info@devstudio.com</a>
+                            </li>
+                            <li class="address-item">
+                                <a href="tel:+380961111111" class="address-item-link link">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="social-box-footer">
+                    <p class="social-text">Приєднуйтесь</p>
+                    <ul class="social-box list">
+                        <li class="social-item">
+                            <a class="social-link link" href="#">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address-item">
-                            <a href="mailto:info@devstudio.com" class="address-item-link link">info@devstudio.com</a>
+                        <li class="social-item">
+                            <a class="social-link link" href="#">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address-item">
-                            <a href="tel:+380961111111" class="address-item-link link">+38 096 111 11 11</a>
+                        <li class="social-item">
+                            <a class="social-link link" href="#">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-fb"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link link" href="#">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
+                </div>
+                <div class="subscription-box">
+                    <p class="subscription-text">Підпишіться на розсилку</p>
+                    <div class="subscription-form-box">
+                        <form class="subscription-form">
+                            <input class="subscription-input" placeholder="E-mail" />
+                            <button class="subscription-button" type="submit">
+                                Підписатися
+                                <svg class="subscription-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-send"></use>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="social-box-footer">
-                <p class="social-text">Приєднуйтесь</p>
-                <ul class="social-box list">
-                    <li class="social-item">
-                        <a class="social-link link" href="#">
-                            <svg class="social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a class="social-link link" href="#">
-                            <svg class="social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a class="social-link link" href="#">
-                            <svg class="social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-fb"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a class="social-link link" href="#">
-                            <svg class="social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            </div>
-    </div>
+        </div>
             </footer>
             </body>
             
