--- a/index.html
+++ b/index.html
@@ -435,8 +435,14 @@
                 id="user-coment" 
                 placeholder="Введіть текст"></textarea>
 
-            <div class="checkbox-box">
-             <input class="checkbox" type="checkbox" id="checkbox" name="checkbox"/>
+            <div class="form-fild-checkbox checkbox">
+             <input class="checkbox-input" 
+             type="checkbox" 
+             id="checkbox" 
+             name="terms-checkbox"/>
+            <svg class="checkbox-icon" width="16" height="15">
+                <use href="./images/icons.svg#icon-check"></use>
+            </svg>
              <label class="form-label-checkbox" for="checkbox">Погоджуюся з розсилкою та приймаю 
                 <a class="checkbox-link" href="#">Умови договору</a></label>
              <button class="form-submit" type="submit">Відправити</button>
