--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </div>
     </div>
 </footer>
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <div class="modal-container">
         <button type="button" class="btn-close" data-modal-close>
