--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 </main>
     <!--футер-->
 <footer>
-    <div class="section footer">
+    <div class="section footer box">
         <div class="section footer container">
             <div class="address-box">
             <a href=./index.html class="logo footer">Web<span class="second-logo footer">Studio</span>
